--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 *.json
 *.env
+*.pyc
+__pycache__/
+*.ipynb_checkpoints
+*.vscode
+*.DS_Store
+*.egg-info/
+*.idea/
+*.vscode/
+*.pytest_cache/
+*.coverage
