--- a/requirements.txt
+++ b/requirements.txt
@@ -66,3 +66,7 @@ vertexai>=1.25.0
 fastapi>=0.85.0
 uvicorn[standard]>=0.18.0
 python-multipart>=0.0.5
+
+#sklearn for machine learning tasks
+scikit-learn>=1.3.0
+
