--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,19 @@ __pycache__/
 *.pytest_cache/
 *.coverage
 *.cpython-*
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+dist/
+build/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.npm/
+.pnpm-debug.log*
