--- a/requirements.txt
+++ b/requirements.txt
@@ -67,6 +67,11 @@ fastapi>=0.85.0
 uvicorn[standard]>=0.18.0
 python-multipart>=0.0.5
 
+# Authentication and password hashing
+passlib[bcrypt]>=1.7.4
+python-jose[cryptography]>=3.3.0
+bcrypt>=4.0.0
+
 #sklearn for machine learning tasks
 scikit-learn>=1.3.0
 
