fix: Resolve Node.js cache and Vite configuration issues
- Remove specific cache-dependency-path to let Node.js auto-detect package-lock.json
- Add manual npm cache configuration for better reliability
- Clean up vite.config.ts by removing test configuration (belongs in vitest.config.ts)
- Add React plugin to Vite config for proper frontend building
- Separate concerns between Vite (build) and Vitest (test) configurations

This should resolve the 'Some specified paths were not resolved, unable to cache dependencies' error in GitHub Actions.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,8 +162,14 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-        cache-dependency-path: 'app/package-lock.json'
+    
+    - name: Cache npm dependencies
+      uses: actions/cache@v4
+      with:
+        path: ./app/node_modules
+        key: ${{ runner.os }}-node-${{ hashFiles('app/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
     
     - name: Install frontend dependencies
       working-directory: ./app
@@ -318,7 +324,6 @@ jobs:
       with:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
-        cache-dependency-path: 'app/package-lock.json'
     
     - name: Start MinIO for Integration Tests
       run: |
