Fix package-lock.json tracking and .gitignore overly broad pattern
- Changed *.json to specific files in .gitignore to allow tracking of important config files
- Added app/package-lock.json to repository for CI dependency caching
- This should resolve the CI error: 'Some specified paths were not resolved, unable to cache dependencies'

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-*.json
+# Configuration files to ignore (but allow package.json, package-lock.json, tsconfig.json, etc.)
+metadata.json
 *.env
 *.pyc
 __pycache__/
