--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -252,8 +252,8 @@ jobs:
   sonarcloud:
     runs-on: ubuntu-latest
     needs: [test-backend, test-frontend]
-    if: github.event.pull_request.head.repo.full_name == github.repository && false
-    # Temporarily disabled - enable when SONAR_TOKEN is configured
+    if: github.event.pull_request.head.repo.full_name == github.repository || github.ref == 'refs/heads/main'
+    # Enable SonarCloud scan for PRs and main branch pushes
     
     steps:
     - name: Checkout code
@@ -394,7 +394,7 @@ jobs:
 
   cleanup:
     runs-on: ubuntu-latest
-    needs: [test-backend, test-frontend, security-scan, sonarcloud, integration-tests, deploy]
+    needs: [test-backend, test-frontend, security-scan, integration-tests, deploy]
     if: always()
     
     steps:
