🔧 Fix SonarCloud CI issues and enhance documentation
✅ Fixed SonarCloud Issues:
- Changed from deprecated sonarcloud-github-action to sonarqube-scan-action@v5.0.0
- Added sonar.analysis.mode=publish to handle automatic analysis conflict
- Updated CI workflow to use recommended action

📚 Enhanced Documentation:
- Added comprehensive backend test coverage information to README
- Detailed coverage commands and CI integration
- Added HTML coverage report instructions
- Set coverage target minimum 75%

🧪 Coverage Features Added:
- pytest-cov integration with HTML/XML reports
- Codecov integration for badge tracking
- Coverage commands for development workflow
- CI pipeline coverage upload to Codecov

🎯 Expected Results:
- SonarCloud analysis should complete without 'Automatic Analysis' error
- Better developer experience with coverage tooling
- Clear documentation for testing and coverage workflows

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,6 +20,9 @@ sonar.typescript.tsconfigPath=app/tsconfig.json
 # Quality gate
 sonar.qualitygate.wait=true
 
+# Analysis settings
+sonar.analysis.mode=publish
+
 # Additional settings
 sonar.sourceEncoding=UTF-8
 sonar.python.xunit.reportPath=junit.xml
