--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -277,9 +277,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      with:
-        args: >
-          -Dsonar.verbose=true
+      continue-on-error: true  # Allow pipeline to continue if SonarCloud fails
 
   integration-tests:
     runs-on: ubuntu-latest
