--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,8 +20,12 @@ sonar.typescript.tsconfigPath=app/tsconfig.json
 # Quality gate
 sonar.qualitygate.wait=true
 
-# Analysis settings
+# Analysis settings - Force CI analysis mode
 sonar.analysis.mode=publish
+sonar.scanner.force-deprecated-java-version=true
+
+# Host configuration
+sonar.host.url=https://sonarcloud.io
 
 # Additional settings
 sonar.sourceEncoding=UTF-8
